syntax = "proto2";
package com.orbekk.example;

option java_generic_services = true;

message Request {

    required int32 weekday = 1;
    required int32 hour = 2;
    required int32 bannerId = 3;
    required int32 geographic = 4;
    required int32 zoneId = 5;
    required int64 guid = 6;
    required string domain = 7;
    required int32 osCode = 8;
    required int32 browserCode = 9;

}

message Response {
    required int32 bannerId = 1;
    required float ctrPrediction = 2;
}


service CTRPredictionService {
    rpc GetPrediction (Request) returns (Response);
}
